--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -75,5 +75,7 @@
     <string>Listen your speak</string>
     <key>NSSpeechRecognitionUsageDescription</key>
     <string>Understand your speak</string>
+    <key>MinimumOSVersion</key>
+    <string>12.0</string>
 </dict>
 </plist>
