--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -79,5 +79,7 @@
 	<string>ReceiveSharing requires the Photos Permission to select and upload the photo</string>
 	<key>MinimumOSVersion</key>
     <string>12.0</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
