--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   rive: ^0.11.12
   firebase_auth: ^4.7.2
   firebase_core: ^2.15.0
-  firebase_crashlytics: ^3.3.4
+  firebase_crashlytics: ^3.4.9
   percent_indicator: ^4.2.3
   flutter_spinkit: ^5.2.0
   google_sign_in: ^6.1.4
@@ -64,6 +64,7 @@ dependencies:
   crypto: ^3.0.3
   flutter_slidable: ^3.0.0
   iso8601_duration: ^0.0.4
+  firebase_analytics: ^10.8.0
 
 dev_dependencies:
   flutter_test:
