--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,6 @@ dependencies:
   intl: ^0.18.0
   scrollable_positioned_list: ^0.3.8
   speech_to_text: ^6.6.0
-  flutter_dotenv: ^5.1.0
   rive: ^0.11.12
   firebase_auth: ^4.7.2
   firebase_core: ^2.15.0
@@ -65,6 +64,7 @@ dependencies:
   flutter_slidable: ^3.0.0
   iso8601_duration: ^0.0.4
   firebase_analytics: ^10.8.0
+  firebase_remote_config: ^4.3.8
 
 dev_dependencies:
   flutter_test:
