--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.dev.quannq.letsspeak</string>
+		<string>group.dev.quannq.letsspeak.ShareExtension</string>
 	</array>
 </dict>
 </plist>
