--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -35,6 +35,10 @@ jobs:
           flutter-version: '3.12.0'
           channel: 'master'
           cache: true
+          cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
+          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
+          pub-cache-key: 'flutter-pub:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache of dart pub get dependencies
+          pub-cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
       - run: flutter --version
 
       - run: echo ${{ secrets.GOOGLE_SERVICE }} | base64 --decode > android/app/google-services.json
@@ -42,6 +46,7 @@ jobs:
       - run: echo ${{ secrets.KEY_PROPERTIES }} | base64 --decode > android/key.properties
       - run: flutter pub get
 
+      - run: flutter clean
       - run: flutter build appbundle
 
       - name: Upload App Bundle
