--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -23,26 +23,24 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
+          distribution: 'corretto'
           java-version: '11'
+
+      - run: echo ${{ secrets.GOOGLE_SERVICE }} | base64 --decode > android/app/google-services.json
+      - run: echo ${{ secrets.RELEASE_KEY_STORE }} | base64 --decode > android/app/letsspeak.jks
+      - run: echo ${{ secrets.KEY_PROPERTIES }} | base64 --decode > android/key.properties
 
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.12.0'
           channel: 'master'
-          cache: false
+          cache: true
       - run: flutter --version
-
-      - run: echo ${{ secrets.GOOGLE_SERVICE }} | base64 --decode > android/app/google-services.json
-      - run: echo ${{ secrets.RELEASE_KEY_STORE }} | base64 --decode > android/app/letsspeak.jks
-      - run: echo ${{ secrets.KEY_PROPERTIES }} | base64 --decode > android/key.properties
       - run: flutter pub get
-
-      - run: flutter clean
       - run: flutter build appbundle
 
       - name: Upload App Bundle
