--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -73,16 +73,21 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Download app-release.aab
         uses: actions/download-artifact@v3
         with:
           name: app-release.aab
 
-      - name: upload artifact to Firebase App Distribution
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
+      - name: Firebase App Distribution
+        uses: wzieba/Firebase-Distribution-Github-Action@v1.7.0
         with:
           appId: ${{secrets.FIREBASE_APP_ID}}
-          token: ${{secrets.FIREBASE_TOKEN}}
+          serviceCredentialsFileContent: ${{secrets.SERVICE_ACCOUNT_PLAY_CONSOLE}}
           groups: testers
           file: app-release.aab
 
