--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -88,7 +88,7 @@ jobs:
         uses: wzieba/Firebase-Distribution-Github-Action@v1.7.0
         with:
           appId: ${{secrets.FIREBASE_APP_ID}}
-          serviceCredentialsFile: google-services.json
+          token: ${{secrets.FIREBASE_TOKEN}}
           groups: testers
           file: app-release.aab
 
